--- a/css/sic_home.1.css
+++ b/css/sic_home.1.css
@@ -4,12 +4,14 @@
   flex-direction: column;
 }
 
-
 #content-viewer {
-  margin-top: 10em;
+  margin-top: 1em;
   display: flex;
-  background-color: rgb(144, 148, 144);
+  background-color: rgb(184, 184, 184);
   justify-content: center;
+  -moz-box-shadow: inset 0 0 10px #000000;
+  -webkit-box-shadow: inset 0 0 10px #000000;
+  box-shadow: inset 0 0 10px #000000;
 }
 
 #breadcrumb {
@@ -53,6 +55,11 @@ div.collapsible-header {
 
 .tabs a:hover {
   color: black;
+}
+
+embed {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 /* .indicator{
